RESOLVED FIXED257485
REGRESSION(262844@main): svg/dynamic-updates/SVGFE* tests no longer react on changes
https://bugs.webkit.org/show_bug.cgi?id=257485
Summary REGRESSION(262844@main): svg/dynamic-updates/SVGFE* tests no longer react on ...
Nikolas Zimmermann
Reported 2023-05-30 07:44:23 PDT
Back in February, svg/dynamic-updates/SVGFE* tests were still working properly - in ToT they no longer show any visual update. Investigate. Mark them as 'ImageOnlyFailure' in the test expectations for now. As said before, these tests should really be reftests -- we cannot detect these kind of issues in EWS & co, since these tests all rely on pixel testing, which is not run by default on the bots.
Attachments
Nikolas Zimmermann
Comment 1 2023-05-30 07:56:02 PDT
EWS
Comment 2 2023-05-30 07:58:28 PDT
Committed 264674@main (03d330e0fe9b): <https://commits.webkit.org/264674@main> Reviewed commits have been landed. Closing PR #14482 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-05-30 07:59:15 PDT
Nikolas Zimmermann
Comment 4 2023-05-30 08:06:51 PDT
They were only marked as failures in the expectations -- the bug is not fixed yet, reopening.
Cameron McCormack (:heycam)
Comment 5 2023-05-31 00:24:00 PDT
Chris Dumez
Comment 6 2023-05-31 08:56:51 PDT
I caused this, I can investigate and fix.
Chris Dumez
Comment 7 2023-05-31 09:52:07 PDT
I have been opening a few of these tests in the browser with a spade before my change and trunk and don't see much difference. How can I tell the tests are failing?
Chris Dumez
Comment 8 2023-05-31 09:59:00 PDT
Maybe not all the tests that were skipped are truly failing. I found LayoutTests/svg/dynamic-updates/SVGFESpotLightElement-dom-z-attr.html that is definitely failing though.
Chris Dumez
Comment 9 2023-05-31 13:02:23 PDT
EWS
Comment 10 2023-05-31 16:14:58 PDT
Committed 264763@main (d91dd403c67e): <https://commits.webkit.org/264763@main> Reviewed commits have been landed. Closing PR #14550 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.