Source/WebCore/svg/SVGFESpecularLightingElement.cpp
@@ -58,8 +58,6 @@ Ref<SVGFESpecularLightingElement> SVGFESpecularLightingElement::create(const Qua
 
 void SVGFESpecularLightingElement::attributeChanged(const QualifiedName& name, const AtomString& oldValue, const AtomString& newValue, AttributeModificationReason attributeModificationReason)
 {
-    SVGFilterPrimitiveStandardAttributes::attributeChanged(name, oldValue, newValue, attributeModificationReason);
-
     switch (name.nodeName()) {
     case AttributeNames::inAttr:
         m_in1->setBaseValInternal(newValue);
@@ -82,6 +80,8 @@ void SVGFESpecularLightingElement::attributeChanged(const QualifiedName& name, c
     default:
         break;
     }
+
+    SVGFilterPrimitiveStandardAttributes::attributeChanged(name, oldValue, newValue, attributeModificationReason);
 }
 
 bool SVGFESpecularLightingElement::setFilterEffectAttribute(FilterEffect& filterEffect, const QualifiedName& attrName)
